# Architecture-Exercises

Submissions/week3/James Martineau/: README.md
christmas-uno/: .gitignore  EXAMPLES.md  GETTING_STARTED.md  README.md  play.py  pyproject.toml  starter_template.py  test_basic.py  train.py
week3/: diagnostic_task.py  generation_results.txt
